dhall/tests/type-inference/failure/unit/UnionTypeMixedKinds.txt
Type error: error: InvalidVariantType
 --> <current file>:1:18
  |
1 | < x : Bool | y : Type >
  |                  ^^^^ InvalidVariantType
  |
